# tablitz

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/tablitz-cli/: Cargo.toml
crates/tablitz-cli/src/: main.rs
crates/tablitz-core/: Cargo.toml
crates/tablitz-core/src/: lib.rs
crates/tablitz-recover/: Cargo.toml
crates/tablitz-recover/src/: lib.rs
crates/tablitz-recover/tests/: integration.rs
crates/tablitz-search/: Cargo.toml
crates/tablitz-search/src/: lib.rs
crates/tablitz-search/tests/: integration.rs
crates/tablitz-store/: Cargo.toml
crates/tablitz-store/src/: lib.rs
crates/tablitz-store/tests/: integration.rs
crates/tablitz-sync/: Cargo.toml
crates/tablitz-sync/src/: lib.rs
crates/tablitz-sync/tests/: integration.rs
docs/: ARCHITECTURE.md  ONETAB-FORMAT.md  RECOVERY.md
