[package]
name = "tablitz-store"
description = "Storage module for tablitz using libSQL"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tablitz-core = { path = "../tablitz-core" }
libsql = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }
