[package]
name = "tablitz-sync"
description = "Git-backed sync and backup for tablitz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tablitz-core = { path = "../tablitz-core" }
tablitz-store = { path = "../tablitz-store" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
